Remove constructor packages

--- a/frontend/app/src/assets/styles/index.pcss
+++ b/frontend/app/src/assets/styles/index.pcss
@@ -1,6 +1,6 @@
-@import '@constructor/ui/styles/reset.css';
-@import '@constructor/ui/styles/globals.css';
-@import '@constructor/ui/styles/themes/goban.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 #app {
   block-size: 100%;
